full packege with fonts

--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,8 +1,6 @@
 @import "mixins/font-face"
 
-+font-face("merriweather-black", "../fonts/Merriweather-Black/Merriweather-Black")
-+font-face("merriweather-regular", "../fonts/Merriweather-Regular/Merriweather-Regular")
-+font-face("opensans-bold", "../fonts/OpenSans-Bold/OpenSans-Bold")
-+font-face("opensans-light", "../fonts/OpenSans-Light/OpenSans-Light")
-+font-face("opensans-lightitalic", "../fonts/OpenSans-LightItalic/OpenSans-LightItalic")
-+font-face("opensans-semibolditalic", "../fonts/OpenSans-SemiBoldItalic/OpenSans-SemiBoldItalic")
++font-face("raleway-light", "../fonts/Raleway-light/raleway-light")
++font-face("raleway-bold", "../fonts/Raleway-bold/raleway-bold")
++font-face("vidaloka", "../fonts/Vidaloka/vidaloka-regular")
+
