--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,13 +1,11 @@
-$default-font: "opensans-light", sans-serif
-$headers-font: "merriweather-regular"
-$items-font: "opensans-semibolditalic"
-$button-font: "opensans-bold"
-$description-font: "opensans-lightitalic"
-$accent: #00CFEE
-$big-text: #365257
-$background: #C9EEF6
-$main-button: #FF4E4E
-$radius: 22px
+$default-font: "raleway-light"
+$logo-font: "vidaloka"
+$items-font: "raleway-bold"
+
+$accent: #590011
+$main-color: #FFE6E6
+$default-text-color: rgba(0, 0, 0, .8)
+$radius: 4px
 
 $grid-gutter-width: 30px
 $grid-columns: 12
