--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -64,6 +64,7 @@ header
 	align-items: center
 	justify-content: space-between
 	width: 100%
+	z-index: 100
 main
 	width: 100%
 	overflow-x: hidden
@@ -82,8 +83,9 @@ main
 	.lang-switch
 		display: flex
 		.lang-button
-			font-family: $items-font
-			color: rgba(0, 0, 0, .6)
+			font-family: $default-font
+			font-size: 1.8rem
+			color: rgba(0, 0, 0, .4)
 			padding: 0 22px
 			background: none
 			border: none
@@ -94,6 +96,7 @@ main
 		background: none
 		border: none
 		font-size: 1.6rem
+		color: $accent
 
 .header_right
 	display: flex
@@ -110,12 +113,12 @@ main
 			//color: $main-color
 			font-family: $default-font
 			line-height: 1.8
-	.call-button
-		background-color: $main-color
-		padding: 2rem 4.6rem
-		font-family: $items-font
-		font-size: 1.6rem
-		border: none
+.main-button
+	background-color: $main-color
+	padding: 2rem 4.6rem
+	font-family: $items-font
+	font-size: 1.6rem
+	border: none
 
 .socials-links
 	position: absolute
@@ -137,7 +140,7 @@ main
 	min-height: 100%
 	display: flex
 	.main-section_left
-		padding: 11rem 4rem 10rem 10rem
+		padding: 18rem 4rem 10rem 10rem
 		width: 50%
 		@include xl
 			width: 60%
@@ -163,7 +166,7 @@ main
 		.bottom-info
 			display: flex
 			flex-wrap: wrap
-			padding: 6rem 0 2rem
+			padding: 10rem 0 2rem
 			margin: 0
 			li
 				width: 50%
@@ -216,9 +219,9 @@ main
 	background-color: #fff
 	padding: 10rem 0 0 0
 .default-section_left
-	padding: 0 0 10rem 10rem
+	padding: 0 0 4rem 10rem
 .default-section_right
-	padding: 0 10rem 10rem 0
+	padding: 0 10rem 4rem 0
 	iframe
 		width: 100%
 		height: 100%
@@ -230,21 +233,46 @@ main
 	font-weight: 300
 	padding: 3rem 0
 .about-features
-	background-color: $main-color
-	padding: 3rem
-	min-height: 40rem
+	//background-color: $main-color
+	//padding: 3rem 10rem
+	padding: 0 10rem 6rem
+	background-color: #fff
+	min-height: 30rem
 	display: flex
 	align-items: center
 	width: 100%
 	margin: 0
 .one-feature
-	height: 12rem
-	border-radius: $radius
+	height: auto
 	display: flex
 	align-items: center
 	justify-content: center
+	padding: 1.5rem
 	p
 		color: $accent
 		font-family: $items-font
-		background-color: #fff
+		background-color: $main-color
 		padding: 2rem
+		width: 100%
+		height: 100%
+		border-radius: $radius
+
+
+
+.top-appeals
+	display: flex
+	background-color: $main-color
+	.top-appeals_left
+		width: 40%
+		background: url("../img/irinadarsi-about.jpg"), rgba(255,231,231,0.8) 20% 40% no-repeat
+		background-size: cover
+		background-blend-mode: multiply
+		background-position: top
+	.top-appeals_right
+		width: 60%
+		padding: 10rem 10rem 13rem
+		.row
+			width: 100%
+			.one-feature
+				p
+					background-color: #fff
