--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -119,6 +119,7 @@ main
 	font-family: $items-font
 	font-size: 1.6rem
 	border: none
+	min-width: 26rem
 
 .socials-links
 	position: absolute
@@ -276,3 +277,121 @@ main
 			.one-feature
 				p
 					background-color: #fff
+
+
+.subscribe-section
+	background-color: #fff
+	width: 100%
+	padding: 10rem
+	display: flex
+.subscribe-section_left
+	width: 50%
+.subscribe-section_right
+	width: 50%
+	display: flex
+	flex-direction: column
+	//align-items: center
+	justify-content: space-between
+	.buttons-wrap
+		//padding-top: 10rem
+		width: 100%
+		padding-bottom: 6rem
+		display: flex
+		justify-content: space-between
+
+
+.gallery-section
+	padding: 10rem
+	background-color: $main-color
+	.photo-wrapper
+		margin-top: 10rem
+		display: grid
+		height: auto
+		grid-template-columns: 1fr 1fr 1fr
+		grid-template-rows: repeat(7, 240px)
+		@include xl
+			grid-template-rows: repeat(7, 180px)
+		@include lg
+			grid-template-columns: 1fr 1fr
+			grid-template-rows: repeat(9, 180px)
+		.one-photo
+			background-color: #cbbde2
+			width: 100%
+			//height: 240px
+		.photo-item2
+			grid-row: span 2
+		.photo-item5
+			grid-row: span 2
+		.photo-item6
+			grid-row: span 2
+			grid-column: span 2
+			@include lg
+				grid-row: span 1
+				grid-column: span 1
+		.photo-item11
+			grid-row: span 2
+			@include lg
+				grid-row: span 1
+				grid-column: span 1
+		.photo-item12
+			grid-row: span 2
+			grid-column: span 2
+
+
+.videofeedback-section
+	padding: 10rem 0
+	.default-head
+		padding-left: 10rem
+	.videofeedback-wrapper
+		display: flex
+		flex-direction: column
+		align-items: center
+		.videofeedback-row
+			width: 100%
+			height: 300px
+			padding: 3.2rem 0
+			.onefeedback-wrapper
+				padding: 0 2rem
+				iframe
+					height: 100%
+					width: 100%
+					border: none
+					background-color: #cccccc
+					margin: 0
+	.facebook-subscribe
+		padding-top: 3.2rem
+		width: 90%
+		display: flex
+		justify-content: center
+		@include xs
+			width: 100%
+
+
+.contacts-section
+	background-color: $main-color
+	display: flex
+	.contacts-section_left
+		width: 50%
+		padding: 10rem 0 10rem 16rem
+	.contacts-section_right
+		width: 50%
+		padding: 10rem 16rem 10rem 0
+
+
+footer
+	background-color: $main-color
+	display: flex
+	align-items: center
+	justify-content: space-between
+	.default-info
+		color: $accent
+		padding: 6rem
+	button
+		background: none
+		border: none
+		font-family: $default-font
+		font-size: 1.8rem
+		text-align: right
+		color: $accent
+		width: 100%
+		text-align: right
