--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1966,6 +1966,17 @@ html {
   color: #999;
   opacity: 1; }
 
+input, textarea {
+  border: none;
+  -webkit-border-radius: 4px;
+          border-radius: 4px;
+  font-family: "opensans-light";
+  font-size: 1.4rem;
+  outline: none; }
+
+textarea {
+  resize: none; }
+
 html, body {
   height: 100%; }
 
@@ -1992,9 +2003,12 @@ body {
 h1, h3, p {
   margin: 0; }
 
-header {
+.main-header {
+  -webkit-transition: all .3s linear;
+  -o-transition: all .3s linear;
+  transition: all .3s linear;
   position: fixed;
-  background-color: rgba(255, 230, 230, 0.7);
+  background: transparent;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -2009,10 +2023,6 @@ header {
           justify-content: space-between;
   width: 100%;
   z-index: 100; }
-
-main {
-  width: 100%;
-  overflow-x: hidden; }
 
 .header_left {
   display: -webkit-box;
@@ -2029,11 +2039,22 @@ main {
   -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+  @media (max-width: 1400px) {
+    .header_left {
+      padding: 1.4rem 1.4rem 1.4rem 6rem; } }
   .header_left .logo-name {
     font-family: "vidaloka";
     font-size: 54px;
     color: #590011;
-    line-height: normal; }
+    line-height: normal;
+    display: none;
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear;
+    white-space: nowrap; }
+    @media (max-width: 1400px) {
+      .header_left .logo-name {
+        font-size: 36px; } }
   .header_left .lang-switch {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2048,12 +2069,13 @@ main {
       border: none; }
     .header_left .lang-switch .lang-button.active {
       color: #590011; }
-  .header_left .read-blog {
-    font-family: "opensans-bold";
-    background: none;
-    border: none;
-    font-size: 1.6rem;
-    color: #590011; }
+
+.transparent-button {
+  font-family: "opensans-bold";
+  background: none;
+  border: none;
+  font-size: 1.6rem;
+  color: #590011; }
 
 .header_right {
   display: -webkit-box;
@@ -2082,9 +2104,12 @@ main {
             flex-direction: column;
     padding: 0 3.2rem; }
     .header_right .phones a {
-      color: #000;
+      color: #FFE6E6;
       font-family: "opensans-light";
-      line-height: 1.8; }
+      line-height: 1.8;
+      -webkit-transition: all .3s linear;
+      -o-transition: all .3s linear;
+      transition: all .3s linear; }
 
 .main-button {
   background-color: #FFE6E6;
@@ -2093,6 +2118,22 @@ main {
   font-size: 1.6rem;
   border: none;
   min-width: 26rem; }
+
+.main-header.active {
+  -webkit-transition: all .3s linear;
+  -o-transition: all .3s linear;
+  transition: all .3s linear;
+  background-color: rgba(255, 230, 230, 0.7); }
+  .main-header.active .header_left .logo-name {
+    display: block;
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear; }
+  .main-header.active .phones a {
+    color: #000;
+    -webkit-transition: all .3s linear;
+    -o-transition: all .3s linear;
+    transition: all .3s linear; }
 
 .socials-links {
   position: absolute;
@@ -2116,10 +2157,13 @@ main {
   .socials-links a {
     color: #590011; }
 
+main {
+  width: 100%;
+  overflow-x: hidden; }
+
 .main-section {
   background-color: #FFE6E6;
   width: 100%;
-  height: 100vh;
   min-height: 100%;
   display: -webkit-box;
   display: -webkit-flex;
@@ -2128,6 +2172,9 @@ main {
   .main-section .main-section_left {
     padding: 18rem 4rem 10rem 10rem;
     width: 50%; }
+    @media (max-width: 1400px) {
+      .main-section .main-section_left {
+        padding: 12rem 4rem 6rem 10rem; } }
     @media only screen and (max-width: 1200px) {
       .main-section .main-section_left {
         width: 60%; } }
@@ -2137,7 +2184,11 @@ main {
       font-size: 12rem;
       font-weight: 300;
       line-height: normal;
-      margin: 0; }
+      margin: 0;
+      white-space: nowrap; }
+      @media (max-width: 1400px) {
+        .main-section .main-section_left .top-info h1 {
+          font-size: 10rem; } }
       @media only screen and (max-width: 1200px) {
         .main-section .main-section_left .top-info h1 {
           font-size: 9rem; } }
@@ -2159,6 +2210,9 @@ main {
               flex-wrap: wrap;
       padding: 10rem 0 2rem;
       margin: 0; }
+      @media (max-width: 1400px) {
+        .main-section .main-section_left .bottom-info {
+          padding: 6rem 0 2rem; } }
       .main-section .main-section_left .bottom-info li {
         width: 50%;
         list-style: none;
@@ -2183,7 +2237,8 @@ main {
           color: #590011;
           font-size: 1.6rem;
           margin: 0;
-          padding-left: 2rem; }
+          padding-left: 2rem;
+          width: 90%; }
   .main-section .main-section_right {
     width: 50%;
     height: inherit;
@@ -2431,6 +2486,16 @@ main {
       .videofeedback-section .facebook-subscribe {
         width: 100%; } }
 
+.button-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
 .contacts-section {
   background-color: #FFE6E6;
   display: -webkit-box;
@@ -2443,6 +2508,20 @@ main {
   .contacts-section .contacts-section_right {
     width: 50%;
     padding: 10rem 16rem 10rem 0; }
+    .contacts-section .contacts-section_right .contacts-form {
+      min-width: 24rem;
+      width: 80%; }
+      .contacts-section .contacts-section_right .contacts-form .input-field {
+        width: 100%;
+        padding: 1rem 0;
+        height: auto; }
+        .contacts-section .contacts-section_right .contacts-form .input-field input {
+          width: inherit;
+          padding: 1.4rem; }
+        .contacts-section .contacts-section_right .contacts-form .input-field textarea {
+          width: inherit;
+          height: 14rem;
+          padding: 1.4rem; }
 
 footer {
   background-color: #FFE6E6;
@@ -2468,5 +2547,4 @@ footer {
     font-size: 1.8rem;
     text-align: right;
     color: #590011;
-    width: 100%;
-    text-align: right; }
+    width: 100%; }
