--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -29,6 +29,14 @@
 	color: #999
 	opacity: 1
 
+input,textarea
+	border: none
+	border-radius: $radius
+	font-family: $default-font
+	font-size: 1.4rem
+	outline: none
+textarea
+	resize: none
 
 html, body
 	height: 100%
@@ -57,29 +65,34 @@ body
 h1, h3, p
 	margin: 0
 
-header
+.main-header
+	transition: all .3s linear
 	position: fixed
-	background-color: rgba(255, 230, 230, .7)
+	background: transparent
 	display: flex
 	align-items: center
 	justify-content: space-between
 	width: 100%
 	z-index: 100
-main
-	width: 100%
-	overflow-x: hidden
+
 .header_left
 	display: flex
 	width: 50%
 	padding: 1.4rem 4rem 1.4rem 6rem
 	align-items: center
 	justify-content: space-between
+	@include rwd(1400)
+		padding: 1.4rem 1.4rem 1.4rem 6rem
 	.logo-name
 		font-family: $logo-font
 		font-size: 54px
 		color: $accent
 		line-height: normal
-		//display: none
+		display: none
+		transition: all .3s linear
+		white-space: nowrap
+		@include rwd(1400)
+			font-size: 36px
 	.lang-switch
 		display: flex
 		.lang-button
@@ -91,12 +104,12 @@ main
 			border: none
 		.lang-button.active
 			color: $accent
-	.read-blog
-		font-family: $items-font
-		background: none
-		border: none
-		font-size: 1.6rem
-		color: $accent
+.transparent-button
+	font-family: $items-font
+	background: none
+	border: none
+	font-size: 1.6rem
+	color: $accent
 
 .header_right
 	display: flex
@@ -109,10 +122,10 @@ main
 		flex-direction: column
 		padding: 0 3.2rem
 		a
-			color: #000
-			//color: $main-color
+			color: $main-color
 			font-family: $default-font
 			line-height: 1.8
+			transition: all .3s linear
 .main-button
 	background-color: $main-color
 	padding: 2rem 4.6rem
@@ -120,6 +133,20 @@ main
 	font-size: 1.6rem
 	border: none
 	min-width: 26rem
+
+.main-header.active
+	transition: all .3s linear
+	background-color: rgba(255, 230, 230, .7)
+	.header_left
+		.logo-name
+			display: block
+			transition: all .3s linear
+	.phones
+		a
+			color: #000
+			transition: all .3s linear
+
+
 
 .socials-links
 	position: absolute
@@ -133,16 +160,20 @@ main
 		color: $accent
 
 
-
+main
+	width: 100%
+	overflow-x: hidden
 .main-section
 	background-color: $main-color
 	width: 100%
-	height: 100vh
+	//height: 100vh
 	min-height: 100%
 	display: flex
 	.main-section_left
 		padding: 18rem 4rem 10rem 10rem
 		width: 50%
+		@include rwd(1400)
+			padding: 12rem 4rem 6rem 10rem
 		@include xl
 			width: 60%
 		.top-info
@@ -154,6 +185,9 @@ main
 				font-weight: 300
 				line-height: normal
 				margin: 0
+				white-space: nowrap
+				@include rwd(1400)
+					font-size: 10rem
 				@include xl
 					font-size: 9rem
 			.buy-button
@@ -169,6 +203,9 @@ main
 			flex-wrap: wrap
 			padding: 10rem 0 2rem
 			margin: 0
+			@include rwd(1400)
+				padding: 6rem 0 2rem
+
 			li
 				width: 50%
 				list-style: none
@@ -187,6 +224,7 @@ main
 					font-size: 1.6rem
 					margin: 0
 					padding-left: 2rem
+					width: 90%
 
 	.main-section_right
 		width: 50%
@@ -366,7 +404,9 @@ main
 		@include xs
 			width: 100%
 
-
+.button-wrapper
+	display: flex
+	justify-content: flex-end
 .contacts-section
 	background-color: $main-color
 	display: flex
@@ -376,6 +416,20 @@ main
 	.contacts-section_right
 		width: 50%
 		padding: 10rem 16rem 10rem 0
+		.contacts-form
+			min-width: 24rem
+			width: 80%
+			.input-field
+				width: 100%
+				padding: 1rem 0
+				height: auto
+				input
+					width: inherit
+					padding: 1.4rem
+				textarea
+					width: inherit
+					height: 14rem
+					padding: 1.4rem
 
 
 footer
@@ -394,4 +448,3 @@ footer
 		text-align: right
 		color: $accent
 		width: 100%
-		text-align: right
