--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2055,6 +2055,9 @@ h1, h3, p {
     @media (max-width: 1400px) {
       .header_left .logo-name {
         font-size: 36px; } }
+    @media only screen and (max-width: 1200px) {
+      .header_left .logo-name {
+        font-size: 28px; } }
   .header_left .lang-switch {
     display: -webkit-box;
     display: -webkit-flex;
@@ -2067,6 +2070,9 @@ h1, h3, p {
       padding: 0 22px;
       background: none;
       border: none; }
+      @media only screen and (max-width: 1200px) {
+        .header_left .lang-switch .lang-button {
+          font-size: 1.6rem; } }
     .header_left .lang-switch .lang-button.active {
       color: #590011; }
 
@@ -2075,7 +2081,8 @@ h1, h3, p {
   background: none;
   border: none;
   font-size: 1.6rem;
-  color: #590011; }
+  color: #590011;
+  white-space: nowrap; }
 
 .header_right {
   display: -webkit-box;
@@ -2110,6 +2117,9 @@ h1, h3, p {
       -webkit-transition: all .3s linear;
       -o-transition: all .3s linear;
       transition: all .3s linear; }
+      @media only screen and (max-width: 1200px) {
+        .header_right .phones a {
+          font-size: 1.6rem; } }
 
 .main-button {
   background-color: #FFE6E6;
@@ -2117,7 +2127,10 @@ h1, h3, p {
   font-family: "opensans-bold";
   font-size: 1.6rem;
   border: none;
-  min-width: 26rem; }
+  min-width: 22rem; }
+  @media only screen and (max-width: 1200px) {
+    .main-button {
+      padding: 1.3rem 2rem; } }
 
 .main-header.active {
   -webkit-transition: all .3s linear;
@@ -2276,19 +2289,33 @@ main {
   margin: 0;
   padding: 3.2rem 0 1.4rem;
   width: 80%; }
+  @media (max-width: 1400px) {
+    .default-info {
+      padding: 1.4rem 0; } }
   @media only screen and (max-width: 1200px) {
     .default-info {
-      width: 100%; } }
+      width: 90%; } }
 
 .about-me {
   background-color: #fff;
   padding: 10rem 0 0 0; }
 
+.left-right-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
 .default-section_left {
   padding: 0 0 4rem 10rem; }
 
 .default-section_right {
-  padding: 0 10rem 4rem 0; }
+  padding: 0 10rem 4rem 1rem;
+  height: 300px; }
   .default-section_right iframe {
     width: 100%;
     height: 100%;
@@ -2330,7 +2357,7 @@ main {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 1.5rem; }
+  padding: .6rem; }
   .one-feature p {
     color: #590011;
     font-family: "opensans-bold";
@@ -2339,7 +2366,9 @@ main {
     width: 100%;
     height: 100%;
     -webkit-border-radius: 4px;
-            border-radius: 4px; }
+            border-radius: 4px;
+    font-size: 1.4rem;
+    line-height: 1.5; }
 
 .top-appeals {
   display: -webkit-box;
@@ -2357,6 +2386,9 @@ main {
   .top-appeals .top-appeals_right {
     width: 60%;
     padding: 10rem 10rem 13rem; }
+    @media only screen and (max-width: 1200px) {
+      .top-appeals .top-appeals_right {
+        padding: 10rem 10rem 13rem 4rem; } }
     .top-appeals .top-appeals_right .row {
       width: 100%; }
       .top-appeals .top-appeals_right .row .one-feature p {
@@ -2462,7 +2494,7 @@ main {
     .videofeedback-section .videofeedback-wrapper .videofeedback-row {
       width: 100%;
       height: 300px;
-      padding: 3.2rem 0; }
+      padding: 3.2rem 6rem; }
       .videofeedback-section .videofeedback-wrapper .videofeedback-row .onefeedback-wrapper {
         padding: 0 2rem; }
         .videofeedback-section .videofeedback-wrapper .videofeedback-row .onefeedback-wrapper iframe {
@@ -2473,18 +2505,7 @@ main {
           margin: 0; }
   .videofeedback-section .facebook-subscribe {
     padding-top: 3.2rem;
-    width: 90%;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; }
-    @media only screen and (max-width: 350px) {
-      .videofeedback-section .facebook-subscribe {
-        width: 100%; } }
+    width: 500px; }
 
 .button-wrapper {
   display: -webkit-box;
