--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -83,6 +83,8 @@ h1, h3, p
 	justify-content: space-between
 	@include rwd(1400)
 		padding: 1.4rem 1.4rem 1.4rem 6rem
+	@include lg
+		padding: 1.4rem
 	.logo-name
 		font-family: $logo-font
 		font-size: 54px
@@ -97,6 +99,8 @@ h1, h3, p
 			font-size: 28px
 	.lang-switch
 		display: flex
+		@include lg
+			padding: 0 2rem
 		.lang-button
 			font-family: $default-font
 			font-size: 1.8rem
@@ -106,6 +110,9 @@ h1, h3, p
 			border: none
 			@include xl
 				font-size: 1.6rem
+			@include lg
+				padding: 0 .8rem
+				font-size: 1.4rem
 		.lang-button.active
 			color: $accent
 .transparent-button
@@ -126,6 +133,8 @@ h1, h3, p
 		display: flex
 		flex-direction: column
 		padding: 0 3.2rem
+		@include lg
+			padding: 0 1.4rem
 		a
 			color: $main-color
 			font-family: $default-font
@@ -133,6 +142,9 @@ h1, h3, p
 			transition: all .3s linear
 			@include xl
 				font-size: 1.6rem
+			@include lg
+				color: #000
+				font-size: 1.4rem
 .main-button
 	background-color: $main-color
 	padding: 2rem 4.6rem
@@ -140,9 +152,10 @@ h1, h3, p
 	font-size: 1.6rem
 	border: none
 	min-width: 22rem
+	white-space: nowrap
 	@include xl
 		padding: 1.3rem 2rem
-
+		min-width: 14rem
 .main-header.active
 	transition: all .3s linear
 	background-color: rgba(255, 230, 230, .7)
@@ -157,6 +170,8 @@ h1, h3, p
 
 
 
+
+
 .socials-links
 	position: absolute
 	left: 0
@@ -165,6 +180,9 @@ h1, h3, p
 	display: flex
 	flex-direction: column
 	align-items: center
+	@include lg
+		padding: 1.4rem
+		font-size: 1.6rem
 	a
 		color: $accent
 
@@ -185,6 +203,9 @@ main
 			padding: 12rem 4rem 6rem 10rem
 		@include xl
 			width: 60%
+		@include lg
+			padding: 12rem 2rem 6rem 6rem
+			width: 50%
 		.top-info
 			//width: 80%
 			h1
@@ -199,6 +220,8 @@ main
 					font-size: 10rem
 				@include xl
 					font-size: 9rem
+				@include lg
+					font-size: 6rem
 			.buy-button
 				background: none
 				border: none
@@ -221,6 +244,8 @@ main
 				padding: 1rem 0
 				display: flex
 				align-items: center
+				@include lg
+					width: 100%
 				span
 					width: 12px
 					height: 12px
@@ -234,6 +259,9 @@ main
 					margin: 0
 					padding-left: 2rem
 					width: 90%
+					@include lg
+						font-size: 1.4rem
+						padding-left: 1rem
 
 	.main-section_right
 		width: 50%
@@ -247,6 +275,8 @@ main
 		background-position: center
 		@include xl
 			width: 40%
+		@include lg
+			width: 50%
 		.main-signature
 			margin: 0
 			padding: 1.4rem
@@ -263,19 +293,27 @@ main
 		padding: 1.4rem 0
 	@include xl
 		width: 90%
+	@include lg
+		width: 100%
 
 
 .about-me
 	background-color: #fff
 	padding: 10rem 0 0 0
+	@include xl
+		padding: 6rem 0 0 0
 .left-right-wrapper
 	display: flex
 	align-items: center
 .default-section_left
 	padding: 0 0 4rem 10rem
+	@include lg
+		padding: 0 6rem 4rem
 .default-section_right
 	padding: 0 10rem 4rem 1rem
 	height: 300px
+	@include lg
+		padding: 0 6rem 4rem
 	iframe
 		width: 100%
 		height: 100%
@@ -286,6 +324,9 @@ main
 	font-size: 3.6rem
 	font-weight: 300
 	padding: 3rem 0
+	@include lg
+		font-size: 3rem
+		line-height: 1.4
 .about-features
 	//background-color: $main-color
 	//padding: 3rem 10rem
@@ -329,9 +370,12 @@ main
 		width: 60%
 		padding: 10rem 10rem 13rem
 		@include xl
-			padding: 10rem 10rem 13rem 4rem
+			padding: 6rem 10rem 6rem 4rem
+		@include lg
+			padding: 6rem 6rem 6rem 4rem
 		.row
 			width: 100%
+			margin: 0
 			.one-feature
 				p
 					background-color: #fff
@@ -342,14 +386,22 @@ main
 	width: 100%
 	padding: 10rem
 	display: flex
+	@include xl
+		padding: 6rem 10rem
+	@include lg
+		padding: 6rem
 .subscribe-section_left
 	width: 50%
+	@include lg
+		padding-right: .7rem
 .subscribe-section_right
 	width: 50%
 	display: flex
 	flex-direction: column
 	//align-items: center
 	justify-content: space-between
+	@include lg
+		padding-left: .7rem
 	.buttons-wrap
 		//padding-top: 10rem
 		width: 100%
@@ -361,6 +413,10 @@ main
 .gallery-section
 	padding: 10rem
 	background-color: $main-color
+	@include xl
+		padding: 6rem 10rem 10rem
+	@include lg
+		padding: 6rem
 	.photo-wrapper
 		margin-top: 10rem
 		display: grid
@@ -369,9 +425,10 @@ main
 		grid-template-rows: repeat(7, 240px)
 		@include xl
 			grid-template-rows: repeat(7, 180px)
+			margin-top: 4rem
 		@include lg
 			grid-template-columns: 1fr 1fr
-			grid-template-rows: repeat(9, 180px)
+			//grid-template-rows: repeat(9, 180px)
 		.one-photo
 			background-color: #cbbde2
 			width: 100%
@@ -394,22 +451,36 @@ main
 		.photo-item12
 			grid-row: span 2
 			grid-column: span 2
+			@include lg
+				grid-row: span 1
+				grid-column: span 1
 
 
 .videofeedback-section
 	padding: 10rem 0
+	@include xl
+		padding: 6rem 0
 	.default-head
 		padding-left: 10rem
+		@include lg
+			padding-left: 6rem
+
 	.videofeedback-wrapper
 		display: flex
 		flex-direction: column
 		align-items: center
 		.videofeedback-row
 			width: 100%
-			height: 300px
+			//height: 300px
 			padding: 3.2rem 6rem
 			.onefeedback-wrapper
 				padding: 0 2rem
+				height: 300px
+				@include rwd(1400)
+					height: 240px
+				@include lg
+					height: 300px
+					padding: 1.4rem 6rem
 				iframe
 					height: 100%
 					width: 100%
@@ -417,7 +488,7 @@ main
 					background-color: #cccccc
 					margin: 0
 	.facebook-subscribe
-		padding-top: 3.2rem
+		padding-top: 6rem
 		width: 500px
 
 
@@ -430,12 +501,22 @@ main
 	.contacts-section_left
 		width: 50%
 		padding: 10rem 0 10rem 16rem
+		@include xl
+			padding: 6rem 0 6rem 16rem
+		@include lg
+			padding: 6rem 0 6rem 6rem
 	.contacts-section_right
 		width: 50%
 		padding: 10rem 16rem 10rem 0
+		@include xl
+			padding: 6rem 16rem 6rem 0
+		@include lg
+			padding: 6rem 6rem 6rem 0
 		.contacts-form
 			min-width: 24rem
 			width: 80%
+			@include xl
+				width: 100%
 			.input-field
 				width: 100%
 				padding: 1rem 0
@@ -465,3 +546,4 @@ footer
 		text-align: right
 		color: $accent
 		width: 100%
+		cursor: pointer
